force-app/main/default/objects/Licencia__c/Licencia__c.object-meta.xml
<CustomObject>
    <label>Licencia</label>
    <nameField>
        <label>Nombre de Licencia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licencias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>