force-app/main/default/objects/Licencia__c/fields/Fecha_de_finaliacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_finaliacion__c</fullName>
    <label>Fecha de finaliación</label>
    <type>DateTime</type>
</CustomField>