force-app/main/default/objects/Licencia__c/fields/Fecha_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio__c</fullName>
    <label>Fecha de inicio</label>
    <type>DateTime</type>
</CustomField>