force-app/main/default/objects/Licencia__c/fields/Nombre_del_empleado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_empleado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del empleado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Licencias</relationshipName>
    <type>Lookup</type>
</CustomField>